--- a/tcc/index.html
+++ b/tcc/index.html
@@ -6,6 +6,6 @@
     <title>Winograd Schema Challenge</title>
 </head>
 <body>
-    <script type='text/javascript' src='https://prod-useast-b.online.tableau.com/javascripts/api/viz_v1.js'></script>
-    <div class='tableauPlaceholder' style='width: 800px; height: 1327px;'><object class='tableauViz' width='800' height='1327' style='display:none;'><param name='host_url' value='https%3A%2F%2Fprod-useast-b.online.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;tccthabata' /><param name='name' value='TCC-anlisetraduopt&#47;Painel1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /></object></div></body>
+    <script type='text/javascript' src='https://prod-useast-b.online.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 800px; height: 1327px;'><object class='tableauViz' width='800' height='1327' style='display:none;'><param name='host_url' value='https%3A%2F%2Fprod-useast-b.online.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;tccthabata' /><param name='name' value='TCC-anlisetraduopt&#47;Painel1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /></object></div>
+</body>
 </html>
