--- a/tcc/index.html
+++ b/tcc/index.html
@@ -15,16 +15,13 @@ Licence URI: https://www.os-templates.com/template-terms
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body id="top">
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
 <div class="wrapper row1">
+  <!-- HEADER  -->
   <header id="header" class="hoc clear"> 
-    <!-- ################################################################################################ -->
     <div id="logo" class="fl_left">
-      <h1><a href="index.html">Chershoee</a></h1>
-      <p>Vestibulum amet</p>
+      <h1><a href="index.html">Winograd Schema Challenge</a></h1>
     </div>
+    <!--
     <div id="quickinfo" class="fl_right">
       <ul class="nospace inline">
         <li><strong>Placerat:</strong><br>
@@ -33,13 +30,15 @@ Licence URI: https://www.os-templates.com/template-terms
           +00 (123) 456 7890</li>
       </ul>
     </div>
-    <!-- ################################################################################################ -->
+    -->
   </header>
+  <!-- MENU -->
   <nav id="mainav" class="hoc clear"> 
-    <!-- ################################################################################################ -->
     <ul class="clear">
-      <li class="active"><a href="index.html">Home</a></li>
-      <li><a class="drop" href="#">Pages</a>
+      <li class="active"><a href="index.html">Projeto</a></li>
+      <li><a href="tableau.html">Demonstração</a></li>
+      <!--
+      <li><a class="drop" href="#">Example</a>
         <ul>
           <li><a href="pages/gallery.html">Gallery</a></li>
           <li><a href="pages/full-width.html">Full Width</a></li>
@@ -48,7 +47,7 @@ Licence URI: https://www.os-templates.com/template-terms
           <li><a href="pages/basic-grid.html">Basic Grid</a></li>
         </ul>
       </li>
-      <li><a class="drop" href="#">Dropdown</a>
+      <li><a class="drop" href="#">Example</a>
         <ul>
           <li><a href="#">Level 2</a></li>
           <li><a class="drop" href="#">Level 2 + Drop</a>
@@ -61,12 +60,11 @@ Licence URI: https://www.os-templates.com/template-terms
           <li><a href="#">Level 2</a></li>
         </ul>
       </li>
-      <li><a href="tableau.html">Demonstração</a></li>
-      <li><a href="#">Link Text</a></li>
-      <li><a href="#">Link Text</a></li>
-      <li><a href="#">Long Link Text</a></li>
+      <li><a href="#">Example</a></li>
+      <li><a href="#">Example</a></li>
+      <li><a href="#">Example</a></li>
+      -->
     </ul>
-    <!-- ################################################################################################ -->
   </nav>
 </div>
 <!-- ################################################################################################ -->
