new adjusts in home

--- a/tcc/index.html
+++ b/tcc/index.html
@@ -9,7 +9,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
-<title>Winograd Schema Challenge</title>
+<title>Desafio de Esquemas de Winograd</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
@@ -19,7 +19,7 @@ Licence URI: https://www.os-templates.com/template-terms
   <!-- HEADER  -->
   <header id="header" class="hoc clear"> 
     <div id="logo" class="fl_left">
-      <h1><a href="index.html">Winograd Schema Challenge</a></h1>
+      <h1><a href="index.html">Desafio de Esquemas de Winograd</a></h1>
     </div>
     <!--
     <div id="quickinfo" class="fl_right">
@@ -74,10 +74,10 @@ Licence URI: https://www.os-templates.com/template-terms
   <div id="pageintro" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <article>
-      <p>Sed diam et lacinia aliquam</p>
-      <h3 class="heading">Viverra massa malesuada</h3>
-      <p>Consectetur in dolor vitae consectetur maecenas id ultrices</p>
-      <footer><a class="btn" href="#">Dolor nam hendrerit</a></footer>
+      <p>Projeto de Formatura 2020</p>
+      <h3 class="heading">Solução do Desafio de Esquemas de Winograd em Português Brasileiro</h3>
+      <p>Escola Politécnica da Universidade de São Paulo</p>
+      <footer><a class="btn" id = "main-cta-button" href="#">Conheça o Projeto</a></footer>
     </article>
     <!-- ################################################################################################ -->
   </div>
