--- a/tcc/index.html
+++ b/tcc/index.html
@@ -77,7 +77,7 @@ Licence URI: https://www.os-templates.com/template-terms
       <p>Projeto de Formatura 2020</p>
       <h3 class="heading">Solução do Desafio de Esquemas de Winograd em Português Brasileiro</h3>
       <p>Escola Politécnica da Universidade de São Paulo</p>
-      <footer><a class="btn" href="#">Conheça o Projeto</a></footer>
+      <footer id="main"><a class="btn" href="#main">Conheça o Projeto</a></footer>
     </article>
     <!-- ################################################################################################ -->
   </div>
