--- a/tcc/index.html
+++ b/tcc/index.html
@@ -95,19 +95,19 @@ Licence URI: https://www.os-templates.com/template-terms
         <p>Quisque commodo orci id convallis vestibulum justo convallis</p>
       </div>
       <ul class="nospace group">
-        <li class="one_third first">
+        <li class="t_third first">
           <article><i class="fa fa-futbol-o"></i>
             <h6 class="heading font-x1"><a href="#">Tortor ultrices</a></h6>
             <p>Aliquam lacus commodo sit amet dui quis placerat ac hendrerit massa etiam ultrices metus maximus [<a href="#">&hellip;</a>]</p>
           </article>
         </li>
-        <li class="one_third">
+        <li class="t_third">
           <article><i class="fa fa-linode"></i>
             <h6 class="heading font-x1"><a href="#">Vestibulum facilisis</a></h6>
             <p>Augue ante auctor elit in iaculis nibh arcu sit amet sem tellus sed ligula vestibulum dictum in [<a href="#">&hellip;</a>]</p>
           </article>
         </li>
-        <li class="one_third">
+        <li class="t_third">
           <article><i class="fa fa-s15"></i>
             <h6 class="heading font-x1"><a href="#">Aliquet condimentum</a></h6>
             <p>Elit donec sodales varius dictum etiam sit amet elit metus sed ac ligula odio et placerat arcu sed [<a href="#">&hellip;</a>]</p>
@@ -118,35 +118,37 @@ Licence URI: https://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <hr class="btmspace-80">
     <!-- ################################################################################################ -->
+    <!-- AUTORES E ORIENTADOR  -->
     <section>
       <div class="sectiontitle">
-        <h6 class="heading">Ligula turpis placerat quis</h6>
-        <p>Lobortis eu rutrum ut magna vivamus sodales quis nibh sit</p>
+        <h6 class="heading">Autores do projeto</h6>
+        <p>Alunos e orientador responsáveis</p>
       </div>
       <ul class="nospace group overview">
         <li class="one_third">
-          <figure><a href="#"><img src="images/demo/320x240.png" alt=""></a>
+          <figure><a href="#"><img src="images/demo/thabs.jpg" alt=""></a>
             <figcaption>
-              <h6 class="heading">Amet tincidunt</h6>
-              <p>Etiam pulvinar mollis dui vitae porta orci fringilla.</p>
+              <h6 class="heading">Thábata Pontes</h6>
+              <p>Aluna de Engenharia Elétrica na USP</p>
             </figcaption>
           </figure>
         </li>
         <li class="one_third">
-          <figure><a href="#"><img src="images/demo/320x240.png" alt=""></a>
+          <figure><a href="#"><img src="images/demo/vecchi.jpg" alt=""></a>
             <figcaption>
-              <h6 class="heading">Tempus nulla non</h6>
-              <p>Fermentum enim curabitur posuere sit amet quam sed.</p>
+              <h6 class="heading">Guilherme Vecchi</h6>
+              <p>Aluno de Engenharia Elétrica na USP</p>
             </figcaption>
           </figure>
         </li>
         <li class="one_third">
-          <figure><a href="#"><img src="images/demo/320x240.png" alt=""></a>
+          <figure><a href="#"><img src="images/demo/glauber-r.jpg" alt=""></a>
             <figcaption>
-              <h6 class="heading">Tristique cras</h6>
-              <p>Purus arcu condimentum non euismod non feugiat nec.</p>
+              <h6 class="heading">Glauber de Bona</h6>
+              <p>Professor doutor na USP e orientador do projeto</p>
             </figcaption>
           </figure>
+        <!--
         </li>
         <li class="one_third">
           <figure><a href="#"><img src="images/demo/320x240.png" alt=""></a>
@@ -172,6 +174,7 @@ Licence URI: https://www.os-templates.com/template-terms
             </figcaption>
           </figure>
         </li>
+        -->
       </ul>
     </section>
     <!-- ################################################################################################ -->
@@ -190,9 +193,6 @@ Licence URI: https://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
   </article>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
 <div class="wrapper row3">
   <section class="hoc container clear"> 
     <!-- ################################################################################################ -->
