tableau page adjusts

--- a/tcc/index.html
+++ b/tcc/index.html
@@ -67,57 +67,57 @@ Licence URI: https://www.os-templates.com/template-terms
     </ul>
   </nav>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
+<!-- INTRODUÇÃO PROJETO -->
 <div class="wrapper bgded overlay" style="background-image:url('images/demo/backgrounds/ai-and-dev.jpg');">
   <div id="pageintro" class="hoc clear"> 
-    <!-- ################################################################################################ -->
     <article>
       <p>Projeto de Formatura 2020</p>
       <h3 class="heading">Solução do Desafio de Esquemas de Winograd em Português Brasileiro</h3>
       <p>Escola Politécnica da Universidade de São Paulo</p>
       <footer id="main"><a class="btn" href="#main">Conheça o Projeto</a></footer>
     </article>
-    <!-- ################################################################################################ -->
   </div>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <div class="wrapper row3">
   <main class="hoc container clear"> 
     <!-- main body -->
-    <!-- ################################################################################################ -->
+    <!-- O QUE É WINOGRAD -->
     <section id="introblocks">
       <div class="sectiontitle">
-        <h6 class="heading">Turpis ac elit placerat porta</h6>
-        <p>Quisque commodo orci id convallis vestibulum justo convallis</p>
+        <h6 class="heading">O que é o Desafio de Esquemas de Winograd?</h6>
+        <br>
+        <p>É uma alternativa ao teste de <b>Turing</b>, um questionário em formato de texto com várias frases ambíguas facilmente solucionáveis pelo ser humano que tem <b>senso comum</b>, mas não pela máquina.</p>
       </div>
       <ul class="nospace group">
         <li class="t_third first">
-          <article><i class="fa fa-futbol-o"></i>
-            <h6 class="heading font-x1"><a href="#">Tortor ultrices</a></h6>
-            <p>Aliquam lacus commodo sit amet dui quis placerat ac hendrerit massa etiam ultrices metus maximus [<a href="#">&hellip;</a>]</p>
+          <article><i class="fa fa-list"></i>
+            <h6 class="heading font-x1"><a href="#">"A medalha não cabe na maleta porque ela é muito grande."</a></h6>
+            <p>O que é muito grande?</p>
+            <p>a) Maleta</p>
+            <p><b>b) Medalha</b></p>
+            </article>
+        </li>
+        <li class="t_third">
+          <article><i class="fa fa-list"></i>
+            <h6 class="heading font-x1"><a href="#">“Paul tentou ligar para o George, mas ele não foi bem sucedido.”</a></h6>
+            <p>Quem não foi bem sucedido?</p>
+            <p><b>b) Paul</b></p>
+            <p>a) George</p>
           </article>
         </li>
         <li class="t_third">
-          <article><i class="fa fa-linode"></i>
-            <h6 class="heading font-x1"><a href="#">Vestibulum facilisis</a></h6>
-            <p>Augue ante auctor elit in iaculis nibh arcu sit amet sem tellus sed ligula vestibulum dictum in [<a href="#">&hellip;</a>]</p>
-          </article>
-        </li>
-        <li class="t_third">
-          <article><i class="fa fa-s15"></i>
-            <h6 class="heading font-x1"><a href="#">Aliquet condimentum</a></h6>
-            <p>Elit donec sodales varius dictum etiam sit amet elit metus sed ac ligula odio et placerat arcu sed [<a href="#">&hellip;</a>]</p>
+          <article><i class="fa fa-list"></i>
+            <h6 class="heading font-x1"><a href="#">“Jane bateu à porta, Eva atendeu.Ela convidou-a para entrar.”</a></h6>
+            <p>Quem convidou pra entrar?</p>
+            <p>a) Jane</p>
+            <p><b>b) Eva</b></p>
           </article>
         </li>
       </ul>
     </section>
     <!-- ################################################################################################ -->
     <hr class="btmspace-80">
-    <!-- ################################################################################################ -->
     <!-- AUTORES E ORIENTADOR  -->
     <section>
       <div class="sectiontitle">
@@ -177,25 +177,20 @@ Licence URI: https://www.os-templates.com/template-terms
         -->
       </ul>
     </section>
-    <!-- ################################################################################################ -->
     <!-- / main body -->
     <div class="clear"></div>
   </main>
 </div>
 <!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
+<!--
 <div class="wrapper coloured">
   <article class="hoc cta clear"> 
-    <!-- ################################################################################################ -->
     <h6 class="three_quarter first">Enim nulla nec eros malesuada ligula nec finibus</h6>
     <footer class="one_quarter"><a class="btn" href="#">Congue venenatis &raquo;</a></footer>
-    <!-- ################################################################################################ -->
   </article>
 </div>
 <div class="wrapper row3">
   <section class="hoc container clear"> 
-    <!-- ################################################################################################ -->
     <div class="sectiontitle">
       <h6 class="heading">Et ipsum suscipit sit amet</h6>
       <p>Molestie dolor blandit mauris porta quam erat ut laoreet velit</p>
@@ -231,24 +226,19 @@ Licence URI: https://www.os-templates.com/template-terms
       </li>
     </ul>
     <footer class="center"><a class="btn" href="#">View All Posts &raquo;</a></footer>
-    <!-- ################################################################################################ -->
   </section>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
 <div class="wrapper row2">
   <figure class="hoc container clear clients"> 
-    <!-- ################################################################################################ -->
     <ul class="nospace group">
       <li class="one_quarter first"><a href="#"><img src="images/demo/222x100.png" alt=""></a></li>
       <li class="one_quarter"><a href="#"><img src="images/demo/222x100.png" alt=""></a></li>
       <li class="one_quarter"><a href="#"><img src="images/demo/222x100.png" alt=""></a></li>
       <li class="one_quarter"><a href="#"><img src="images/demo/222x100.png" alt=""></a></li>
     </ul>
-    <!-- ################################################################################################ -->
   </figure>
 </div>
+
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
