--- a/tcc/tableau.html
+++ b/tcc/tableau.html
@@ -74,27 +74,50 @@ Licence URI: https://www.os-templates.com/template-terms
     <!-- O QUE É WINOGRAD -->
     <section id="introblocks">
       <div class="sectiontitle">
-        <h6 class="heading">***COLOCAR RESULTADOS***</h6>
-        <br>
-        <p>***EXPLICAR DEMONSTRAÇÃO***</p>
+        <h6 class="heading">Soluções para o Desafio</h6>
       </div>
+      <h3>Primeira abordagem</h3>
+        <br>
+        <p>A primeira abordagem escolhida foi a de traduzir os esquemas com ambiguidade em português brasileiro para o inglês e utilizar um <b>modelo pré-treinado em inglês</b>.</p>
       <ul class="nospace group">
-        <li class="t_third first">
-          <article><i class="fa fa-list"></i>
-            <h6 class="heading font-x1"><a href="#">***RESULTADO***</a></h6>
-            </article>
-        </li>
-        <li class="t_third">
-          <article><i class="fa fa-list"></i>
-            <h6 class="heading font-x1"><a href="#">***RESULTADO***</a></h6>
+        <li class="f_abordagem">
+          <article>
+            <h3 class="heading font-x1"><a href="#">BERT-Large sem ajuste fino</a></h3>
+            <h5><b>61,4%</b></h5>  
           </article>
         </li>
-        <li class="t_third">
-          <article><i class="fa fa-list"></i>
-            <h6 class="heading font-x1"><a href="#">***RESULTADO***</a></h6>
+        <li class="f_abordagem">
+          <article>
+            <h3 class="heading font-x1"><a href="#">BERT-Large com ajuste fino no WSCR</a></h3>
+            <h5><b>72,6%</b></h5>
           </article>
         </li>
       </ul>
+      <br>
+      <br>
+        <h3>Segunda abordagem</h3>
+        <br>
+        <p>A segunda abordagem escolhida foi a de utilizar os esquemas com ambiguidade em português brasileiro em um <b>modelo pré-treinado em português ou treinar um</b>.</p>
+        <ul class="nospace group">
+          <li class="s_abordagem">
+            <article>
+              <h3 class="heading font-x1"><a href="#">BERT-Base Multilingual</a></h3>
+              <h5><b>58,6%</b></h5>  
+            </article>
+          </li>
+          <li class="s_abordagem">
+            <article>
+              <h3 class="heading font-x1"><a href="#">BERT-Large em português</a></h3>
+              <h5><b>55,4%</b></h5>
+            </article>
+          </li>
+          <li class="s_abordagem">
+            <article>
+              <h3 class="heading font-x1"><a href="#">BERT Multilingual 44k esquemas</a></h3>
+              <h5><b>61,75%</b></h5>
+            </article>
+          </li>
+        </ul>
     </section>
     <h4>***TESTE AQUI***</h4>
     <script type='text/javascript' src='https://prod-useast-b.online.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 800px; height: 1327px;'><object class='tableauViz' width='100%' height='1327' style='display:none;'><param name='host_url' value='https%3A%2F%2Fprod-useast-b.online.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;tccthabata' /><param name='name' value='TCC-anlisetraduopt&#47;Painel1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /></object></div>
