--- a/tcc/tableau.html
+++ b/tcc/tableau.html
@@ -8,20 +8,22 @@ Licence URI: https://www.os-templates.com/template-terms
 -->
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
+
 <head>
-<title>Desafio de Esquemas de Winograd</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+  <title>Desafio de Esquemas de Winograd</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
+
 <body id="top">
-<div class="wrapper row1">
-  <!-- HEADER  -->
-  <header id="header" class="hoc clear"> 
-    <div id="logo" class="fl_left">
-      <h1><a href="index.html">Desafio de Esquemas de Winograd</a></h1>
-    </div>
-    <!--
+  <div class="wrapper row1">
+    <!-- HEADER  -->
+    <header id="header" class="hoc clear">
+      <div id="logo" class="fl_left">
+        <h1><a href="index.html">Desafio de Esquemas de Winograd</a></h1>
+      </div>
+      <!--
     <div id="quickinfo" class="fl_right">
       <ul class="nospace inline">
         <li><strong>Placerat:</strong><br>
@@ -31,13 +33,13 @@ Licence URI: https://www.os-templates.com/template-terms
       </ul>
     </div>
     -->
-  </header>
-  <!-- MENU -->
-  <nav id="mainav" class="hoc clear"> 
-    <ul class="clear">
-      <li class="active"><a href="index.html">Projeto</a></li>
-      <li><a href="tableau.html">Demonstração</a></li>
-      <!--
+    </header>
+    <!-- MENU -->
+    <nav id="mainav" class="hoc clear">
+      <ul class="clear">
+        <li class="active"><a href="index.html">Projeto</a></li>
+        <li><a href="tableau.html">Demonstração</a></li>
+        <!--
       <li><a class="drop" href="#">Example</a>
         <ul>
           <li><a href="pages/gallery.html">Gallery</a></li>
@@ -64,45 +66,47 @@ Licence URI: https://www.os-templates.com/template-terms
       <li><a href="#">Example</a></li>
       <li><a href="#">Example</a></li>
       -->
-    </ul>
-  </nav>
-</div>
-<!-- INTRODUÇÃO DEMONSTRAÇÃO -->
-<div class="wrapper row3">
-  <main class="hoc container clear"> 
-    <!-- main body -->
-    <!-- O QUE É WINOGRAD -->
-    <section id="introblocks">
-      <div class="sectiontitle">
-        <h6 class="heading">Soluções para o Desafio</h6>
-      </div>
-      <h3>Primeira abordagem</h3>
-        <br>
-        <p>A primeira abordagem escolhida foi a de traduzir os esquemas com ambiguidade em português brasileiro para o inglês e utilizar um <b>modelo pré-treinado em inglês</b>.</p>
-      <ul class="nospace group">
-        <li class="f_abordagem">
-          <article>
-            <h3 class="heading font-x1"><a href="#">BERT-Large sem ajuste fino</a></h3>
-            <h5><b>61,4%</b></h5>  
-          </article>
-        </li>
-        <li class="f_abordagem">
-          <article>
-            <h3 class="heading font-x1"><a href="#">BERT-Large com ajuste fino no WSCR</a></h3>
-            <h5><b>72,6%</b></h5>
-          </article>
-        </li>
       </ul>
-      <br>
-      <br>
+    </nav>
+  </div>
+  <!-- INTRODUÇÃO DEMONSTRAÇÃO -->
+  <div class="wrapper row3">
+    <main class="hoc container clear">
+      <!-- main body -->
+      <!-- O QUE É WINOGRAD -->
+      <section id="introblocks">
+        <div class="sectiontitle">
+          <h6 class="heading">Soluções para o Desafio</h6>
+        </div>
+        <h3>Primeira abordagem</h3>
+        <br>
+        <p>A primeira abordagem escolhida foi a de traduzir os esquemas com ambiguidade em português brasileiro para o
+          inglês e utilizar um <b>modelo pré-treinado em inglês</b>.</p>
+        <ul class="nospace group">
+          <li class="f_abordagem">
+            <article>
+              <h3 class="heading font-x1"><a href="#">BERT-Large sem ajuste fino</a></h3>
+              <h5><b>61,4%</b></h5>
+            </article>
+          </li>
+          <li class="f_abordagem">
+            <article>
+              <h3 class="heading font-x1"><a href="#">BERT-Large com ajuste fino no WSCR</a></h3>
+              <h5><b>72,6%</b></h5>
+            </article>
+          </li>
+        </ul>
+        <br>
+        <br>
         <h3>Segunda abordagem</h3>
         <br>
-        <p>A segunda abordagem escolhida foi a de utilizar os esquemas com ambiguidade em português brasileiro em um <b>modelo pré-treinado em português ou treinar um</b>.</p>
+        <p>A segunda abordagem escolhida foi a de utilizar os esquemas com ambiguidade em português brasileiro em um
+          <b>modelo pré-treinado em português ou treinar um</b>.</p>
         <ul class="nospace group">
           <li class="s_abordagem">
             <article>
               <h3 class="heading font-x1"><a href="#">BERT-Base Multilingual</a></h3>
-              <h5><b>58,6%</b></h5>  
+              <h5><b>58,6%</b></h5>
             </article>
           </li>
           <li class="s_abordagem">
@@ -118,16 +122,48 @@ Licence URI: https://www.os-templates.com/template-terms
             </article>
           </li>
         </ul>
-    </section>
-    <h4>***TESTE AQUI***</h4>
-    <script type='text/javascript' src='https://prod-useast-b.online.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 800px; height: 1327px;'><object class='tableauViz' width='100%' height='1327' style='display:none;'><param name='host_url' value='https%3A%2F%2Fprod-useast-b.online.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;tccthabata' /><param name='name' value='TCC-anlisetraduopt&#47;Painel1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /></object></div>
-    <!-- ################################################################################################ -->
-    <hr class="btmspace-80">
-    <div class="clear"></div>
-  </main>
-</div>
-<!-- ################################################################################################ -->
-<!--
+      </section>
+      <h4>***TESTE AQUI***</h4>
+      <div class='tableauPlaceholder' id='viz1605381452914' style='position: relative'><noscript><a href='#'><img
+              alt=' '
+              src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Te&#47;TesteTCC&#47;Graficoaleatrio&#47;1_rss.png'
+              style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+          <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+          <param name='embed_code_version' value='3' />
+          <param name='site_root' value='' />
+          <param name='name' value='TesteTCC&#47;Graficoaleatrio' />
+          <param name='tabs' value='no' />
+          <param name='toolbar' value='yes' />
+          <param name='static_image'
+            value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Te&#47;TesteTCC&#47;Graficoaleatrio&#47;1.png' />
+          <param name='animate_transition' value='yes' />
+          <param name='display_static_image' value='yes' />
+          <param name='display_spinner' value='yes' />
+          <param name='display_overlay' value='yes' />
+          <param name='display_count' value='yes' />
+          <param name='language' value='pt' />
+          <param name='filter' value='publish=yes' /></object>
+        </div>
+      <script type='text/javascript'>
+        var divElement = document.getElementById('viz1605381452914');
+        var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+      <script type='text/javascript' src='https://prod-useast-b.online.tableau.com/javascripts/api/viz_v1.js'></script>
+      <div class='tableauPlaceholder' style='width: 800px; height: 1327px;'><object class='tableauViz' width='100%'
+          height='1327' style='display:none;'>
+          <param name='host_url' value='https%3A%2F%2Fprod-useast-b.online.tableau.com%2F' />
+          <param name='embed_code_version' value='3' />
+          <param name='site_root' value='&#47;t&#47;tccthabata' />
+          <param name='name' value='TCC-anlisetraduopt&#47;Painel1' />
+          <param name='tabs' value='no' />
+          <param name='toolbar' value='yes' />
+          <param name='showAppBanner' value='false' /></object></div>
+      <!-- ################################################################################################ -->
+      <hr class="btmspace-80">
+      <div class="clear"></div>
+    </main>
+  </div>
+  <!-- ################################################################################################ -->
+  <!--
 <div class="wrapper coloured">
   <article class="hoc cta clear"> 
     <h6 class="three_quarter first">Enim nulla nec eros malesuada ligula nec finibus</h6>
@@ -185,82 +221,84 @@ Licence URI: https://www.os-templates.com/template-terms
 </div>
 
 <!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper row4">
-  <footer id="footer" class="hoc clear"> 
-    <!-- ################################################################################################ -->
-    <div class="one_quarter first">
-      <h6 class="heading">Est aenean fermentum</h6>
-      <ul class="nospace btmspace-30 linklist contact">
-        <li><i class="fa fa-map-marker"></i>
-          <address>
-          Street Name &amp; Number, Town, Postcode/Zip
-          </address>
-        </li>
-        <li><i class="fa fa-phone"></i> +00 (123) 456 7890</li>
-        <li><i class="fa fa-envelope-o"></i> info@domain.com</li>
-      </ul>
-      <ul class="faico clear">
-        <li><a class="faicon-facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-        <li><a class="faicon-twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a class="faicon-dribble" href="#"><i class="fa fa-dribbble"></i></a></li>
-        <li><a class="faicon-linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
-      </ul>
-    </div>
-    <div class="one_quarter">
-      <h6 class="heading">Ante volutpat iaculis</h6>
-      <ul class="nospace linklist">
-        <li><a href="#">Ipsum eu urna tristique</a></li>
-        <li><a href="#">Tempor nunc aliquet</a></li>
-        <li><a href="#">Ipsum sit amet mollis</a></li>
-        <li><a href="#">Ullamcorper odio velit</a></li>
-        <li><a href="#">Vulputate magna at rhoncus</a></li>
-      </ul>
-    </div>
-    <div class="one_quarter">
-      <h6 class="heading">Nisl commodo ut nam</h6>
-      <ul class="nospace linklist">
-        <li><a href="#">Turpis diam eget quam in</a></li>
-        <li><a href="#">Blandit sed nulla id tempor</a></li>
-        <li><a href="#">Duis interdum ligula at</a></li>
-        <li><a href="#">Lectus venenatis blandit</a></li>
-        <li><a href="#">Nulla molestie tellus</a></li>
-      </ul>
-    </div>
-    <div class="one_quarter">
-      <h6 class="heading">Aliquam risus dolor at</h6>
-      <p class="nospace btmspace-15">Ultricies neque sollicitudin sit amet phasellus vel est quam vivamus finibus.</p>
-      <form method="post" action="#">
-        <fieldset>
-          <legend>Newsletter:</legend>
-          <input class="btmspace-15" type="text" value="" placeholder="Name">
-          <input class="btmspace-15" type="text" value="" placeholder="Email">
-          <button type="submit" value="submit">Submit</button>
-        </fieldset>
-      </form>
-    </div>
-    <!-- ################################################################################################ -->
-  </footer>
-</div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper row5">
-  <div id="copyright" class="hoc clear"> 
-    <!-- ################################################################################################ -->
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-    <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <div class="wrapper row4">
+    <footer id="footer" class="hoc clear">
+      <!-- ################################################################################################ -->
+      <div class="one_quarter first">
+        <h6 class="heading">Est aenean fermentum</h6>
+        <ul class="nospace btmspace-30 linklist contact">
+          <li><i class="fa fa-map-marker"></i>
+            <address>
+              Street Name &amp; Number, Town, Postcode/Zip
+            </address>
+          </li>
+          <li><i class="fa fa-phone"></i> +00 (123) 456 7890</li>
+          <li><i class="fa fa-envelope-o"></i> info@domain.com</li>
+        </ul>
+        <ul class="faico clear">
+          <li><a class="faicon-facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+          <li><a class="faicon-twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+          <li><a class="faicon-dribble" href="#"><i class="fa fa-dribbble"></i></a></li>
+          <li><a class="faicon-linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
+        </ul>
+      </div>
+      <div class="one_quarter">
+        <h6 class="heading">Ante volutpat iaculis</h6>
+        <ul class="nospace linklist">
+          <li><a href="#">Ipsum eu urna tristique</a></li>
+          <li><a href="#">Tempor nunc aliquet</a></li>
+          <li><a href="#">Ipsum sit amet mollis</a></li>
+          <li><a href="#">Ullamcorper odio velit</a></li>
+          <li><a href="#">Vulputate magna at rhoncus</a></li>
+        </ul>
+      </div>
+      <div class="one_quarter">
+        <h6 class="heading">Nisl commodo ut nam</h6>
+        <ul class="nospace linklist">
+          <li><a href="#">Turpis diam eget quam in</a></li>
+          <li><a href="#">Blandit sed nulla id tempor</a></li>
+          <li><a href="#">Duis interdum ligula at</a></li>
+          <li><a href="#">Lectus venenatis blandit</a></li>
+          <li><a href="#">Nulla molestie tellus</a></li>
+        </ul>
+      </div>
+      <div class="one_quarter">
+        <h6 class="heading">Aliquam risus dolor at</h6>
+        <p class="nospace btmspace-15">Ultricies neque sollicitudin sit amet phasellus vel est quam vivamus finibus.</p>
+        <form method="post" action="#">
+          <fieldset>
+            <legend>Newsletter:</legend>
+            <input class="btmspace-15" type="text" value="" placeholder="Name">
+            <input class="btmspace-15" type="text" value="" placeholder="Email">
+            <button type="submit" value="submit">Submit</button>
+          </fieldset>
+        </form>
+      </div>
+      <!-- ################################################################################################ -->
+    </footer>
   </div>
-</div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
-<!-- JAVASCRIPTS -->
-<script src="layout/scripts/jquery.min.js"></script>
-<script src="layout/scripts/jquery.backtotop.js"></script>
-<script src="layout/scripts/jquery.mobilemenu.js"></script>
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <div class="wrapper row5">
+    <div id="copyright" class="hoc clear">
+      <!-- ################################################################################################ -->
+      <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
+      <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/"
+          title="Free Website Templates">OS Templates</a></p>
+      <!-- ################################################################################################ -->
+    </div>
+  </div>
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
+  <!-- JAVASCRIPTS -->
+  <script src="layout/scripts/jquery.min.js"></script>
+  <script src="layout/scripts/jquery.backtotop.js"></script>
+  <script src="layout/scripts/jquery.mobilemenu.js"></script>
 </body>
+
 </html>
