--- a/tcc/tableau.html
+++ b/tcc/tableau.html
@@ -146,17 +146,8 @@ Licence URI: https://www.os-templates.com/template-terms
         </div>
       <script type='text/javascript'>
         var divElement = document.getElementById('viz1605381452914');
-        var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-      <script type='text/javascript' src='https://prod-useast-b.online.tableau.com/javascripts/api/viz_v1.js'></script>
-      <div class='tableauPlaceholder' style='width: 800px; height: 1327px;'><object class='tableauViz' width='100%'
-          height='1327' style='display:none;'>
-          <param name='host_url' value='https%3A%2F%2Fprod-useast-b.online.tableau.com%2F' />
-          <param name='embed_code_version' value='3' />
-          <param name='site_root' value='&#47;t&#47;tccthabata' />
-          <param name='name' value='TCC-anlisetraduopt&#47;Painel1' />
-          <param name='tabs' value='no' />
-          <param name='toolbar' value='yes' />
-          <param name='showAppBanner' value='false' /></object></div>
+        var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+      </script>
       <!-- ################################################################################################ -->
       <hr class="btmspace-80">
       <div class="clear"></div>
