--- a/tcc/tableau.html
+++ b/tcc/tableau.html
@@ -73,55 +73,56 @@ Licence URI: https://www.os-templates.com/template-terms
   <div class="wrapper row3">
     <main class="hoc container clear">
       <!-- main body -->
-      <!-- O QUE É WINOGRAD -->
-      <section id="introblocks">
         <div class="sectiontitle">
           <h6 class="heading">Soluções para o Desafio</h6>
         </div>
-        <h3>Primeira abordagem</h3>
-        <br>
-        <p>A primeira abordagem escolhida foi a de traduzir os esquemas com ambiguidade em português brasileiro para o
-          inglês e utilizar um <b>modelo pré-treinado em inglês</b>.</p>
-        <ul class="nospace group">
-          <li class="f_abordagem">
-            <article>
-              <h3 class="heading font-x1"><a href="#">BERT-Large sem ajuste fino</a></h3>
-              <h5><b>61,4%</b></h5>
-            </article>
-          </li>
-          <li class="f_abordagem">
-            <article>
-              <h3 class="heading font-x1"><a href="#">BERT-Large com ajuste fino no WSCR</a></h3>
-              <h5><b>72,6%</b></h5>
-            </article>
-          </li>
-        </ul>
-        <br>
-        <br>
+        <section id="introblocks">
+          <h3>Primeira abordagem</h3>
+          <br>
+          <p>A primeira abordagem escolhida foi a de traduzir os esquemas com ambiguidade em português brasileiro para o
+            inglês e utilizar um <b>modelo pré-treinado em inglês</b>.</p>
+          <ul class="nospace group">
+            <li class="f_abordagem">
+              <article>
+                <h3 class="heading font-x1"><a href="#">BERT-Large sem ajuste fino</a></h3>
+                <h5><b>61,4%</b></h5>
+              </article>
+            </li>
+            <li class="f_abordagem">
+              <article>
+                <h3 class="heading font-x1"><a href="#">BERT-Large com ajuste fino no WSCR</a></h3>
+                <h5><b>72,6%</b></h5>
+              </article>
+            </li>
+          </ul>
+          <br>
+          <br>
+        </section>
+        <section id="introblocks">
         <h3>Segunda abordagem</h3>
         <br>
         <p>A segunda abordagem escolhida foi a de utilizar os esquemas com ambiguidade em português brasileiro em um
           <b>modelo pré-treinado em português ou treinar um</b>.</p>
-        <ul class="nospace group">
-          <li class="s_abordagem">
-            <article>
-              <h3 class="heading font-x1"><a href="#">BERT-Base Multilingual</a></h3>
-              <h5><b>58,6%</b></h5>
-            </article>
-          </li>
-          <li class="s_abordagem">
-            <article>
-              <h3 class="heading font-x1"><a href="#">BERT-Large em português</a></h3>
-              <h5><b>55,4%</b></h5>
-            </article>
-          </li>
-          <li class="s_abordagem">
-            <article>
-              <h3 class="heading font-x1"><a href="#">BERT Multilingual 44k esquemas</a></h3>
-              <h5><b>61,75%</b></h5>
-            </article>
-          </li>
-        </ul>
+          <ul class="nospace group">
+            <li class="s_abordagem">
+              <article>
+                <h3 class="heading font-x1"><a href="#">BERT-Base Multilingual</a></h3>
+                <h5><b>58,6%</b></h5>
+              </article>
+            </li>
+            <li class="s_abordagem">
+              <article>
+                <h3 class="heading font-x1"><a href="#">BERT-Large em português</a></h3>
+                <h5><b>55,4%</b></h5>
+              </article>
+            </li>
+            <li class="s_abordagem">
+              <article>
+                <h3 class="heading font-x1"><a href="#">BERT Multilingual Winogrande</a></h3>
+                <h5><b>61,75%</b></h5>
+              </article>
+            </li>
+          </ul>
       </section>
       <h4>***TESTE AQUI***</h4>
       <div class='tableauPlaceholder' id='viz1605381452914' style='position: relative'><noscript><a href='#'><img
@@ -143,12 +144,11 @@ Licence URI: https://www.os-templates.com/template-terms
           <param name='display_count' value='yes' />
           <param name='language' value='pt' />
           <param name='filter' value='publish=yes' /></object>
-        </div>
+      </div>
       <script type='text/javascript'>
         var divElement = document.getElementById('viz1605381452914');
         var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                
       </script>
-      <!-- ################################################################################################ -->
       <hr class="btmspace-80">
       <div class="clear"></div>
     </main>
@@ -210,8 +210,8 @@ Licence URI: https://www.os-templates.com/template-terms
     </ul>
   </figure>
 </div>
+-->
 
-<!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
   <div class="wrapper row4">
