--- a/tcc/tableau.html
+++ b/tcc/tableau.html
@@ -124,7 +124,6 @@ Licence URI: https://www.os-templates.com/template-terms
             </li>
           </ul>
       </section>
-      <h4>***TESTE AQUI***</h4>
       <div class='tableauPlaceholder' id='viz1605381452914' style='position: relative'><noscript><a href='#'><img
               alt=' '
               src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Te&#47;TesteTCC&#47;Graficoaleatrio&#47;1_rss.png'
@@ -213,28 +212,26 @@ Licence URI: https://www.os-templates.com/template-terms
 -->
 
   <!-- ################################################################################################ -->
-  <!-- ################################################################################################ -->
   <div class="wrapper row4">
     <footer id="footer" class="hoc clear">
-      <!-- ################################################################################################ -->
       <div class="one_quarter first">
-        <h6 class="heading">Est aenean fermentum</h6>
+        <h6 class="heading">Contatos</h6>
         <ul class="nospace btmspace-30 linklist contact">
           <li><i class="fa fa-map-marker"></i>
             <address>
-              Street Name &amp; Number, Town, Postcode/Zip
+            Av. Prof. Luciano Gualberto &amp; 380, Escola Politécnica da Universidade de São Paulo
             </address>
           </li>
-          <li><i class="fa fa-phone"></i> +00 (123) 456 7890</li>
-          <li><i class="fa fa-envelope-o"></i> info@domain.com</li>
+          <li ><i class="fa fa-phone"></i> +55 (11) 970372050</li>
+          <li ><i class="fa fa-envelope-o"></i>thabata.risso@usp.br   |   guilherme.vecchi@usp.br</li>
         </ul>
         <ul class="faico clear">
-          <li><a class="faicon-facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a class="faicon-twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a class="faicon-dribble" href="#"><i class="fa fa-dribbble"></i></a></li>
-          <li><a class="faicon-linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
+          <li><a class="faicon-facebook" href="https://github.com/thaapontes/tcc_project" title="Repositório do projeto"><i class="fa fa-github"></i></a></li>
+          <li><a class="faicon-facebook" href="https://github.com/thaapontes/thaapontes.github.io" title="Repositório do website"><i class="fa fa-github"></i></a></li>
+          <li><a class="faicon-linkedin" href="https://www.linkedin.com/in/thabata-pontes/" title="Thábata's Linkedin"><i class="fa fa-linkedin"></i></a></li>
         </ul>
       </div>
+      <!--
       <div class="one_quarter">
         <h6 class="heading">Ante volutpat iaculis</h6>
         <ul class="nospace linklist">
@@ -267,23 +264,17 @@ Licence URI: https://www.os-templates.com/template-terms
           </fieldset>
         </form>
       </div>
-      <!-- ################################################################################################ -->
+      -->
     </footer>
   </div>
   <!-- ################################################################################################ -->
-  <!-- ################################################################################################ -->
-  <!-- ################################################################################################ -->
   <div class="wrapper row5">
     <div id="copyright" class="hoc clear">
-      <!-- ################################################################################################ -->
       <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
       <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/"
           title="Free Website Templates">OS Templates</a></p>
-      <!-- ################################################################################################ -->
     </div>
   </div>
-  <!-- ################################################################################################ -->
-  <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
   <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
   <!-- JAVASCRIPTS -->
