add tableau dashboard

--- a/tcc/tableau.html
+++ b/tcc/tableau.html
@@ -73,69 +73,67 @@ Licence URI: https://www.os-templates.com/template-terms
   <div class="wrapper row3">
     <main class="hoc container clear">
       <!-- main body -->
-        <div class="sectiontitle">
-          <h6 class="heading">Soluções para o Desafio</h6>
-        </div>
-        <section id="introblocks">
-          <h3>Primeira abordagem</h3>
-          <br>
-          <p>A primeira abordagem escolhida foi a de traduzir os esquemas com ambiguidade em português brasileiro para o
-            inglês e utilizar um <b>modelo pré-treinado em inglês</b>.</p>
-          <ul class="nospace group">
-            <li class="f_abordagem">
-              <article>
-                <h3 class="heading font-x1"><a href="#">BERT-Large sem ajuste fino</a></h3>
-                <h5><b>61,4%</b></h5>
-              </article>
-            </li>
-            <li class="f_abordagem">
-              <article>
-                <h3 class="heading font-x1"><a href="#">BERT-Large com ajuste fino no WSCR</a></h3>
-                <h5><b>72,6%</b></h5>
-              </article>
-            </li>
-          </ul>
-          <br>
-          <br>
-        </section>
-        <section id="introblocks">
+      <div class="sectiontitle">
+        <h6 class="heading">Soluções para o Desafio</h6>
+      </div>
+      <section id="introblocks">
+        <h3>Primeira abordagem</h3>
+        <br>
+        <p>A primeira abordagem escolhida foi a de traduzir os esquemas com ambiguidade em português brasileiro para o
+          inglês e utilizar um <b>modelo pré-treinado em inglês</b>.</p>
+        <ul class="nospace group">
+          <li class="f_abordagem">
+            <article>
+              <h3 class="heading font-x1"><a href="#">BERT-Large sem ajuste fino</a></h3>
+              <h5><b>61,4%</b></h5>
+            </article>
+          </li>
+          <li class="f_abordagem">
+            <article>
+              <h3 class="heading font-x1"><a href="#">BERT-Large com ajuste fino no WSCR</a></h3>
+              <h5><b>72,6%</b></h5>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <section id="introblocks">
         <h3>Segunda abordagem</h3>
         <br>
         <p>A segunda abordagem escolhida foi a de utilizar os esquemas com ambiguidade em português brasileiro em um
           <b>modelo pré-treinado em português ou treinar um</b>.</p>
-          <ul class="nospace group">
-            <li class="s_abordagem">
-              <article>
-                <h3 class="heading font-x1"><a href="#">BERT-Base Multilingual</a></h3>
-                <h5><b>58,6%</b></h5>
-              </article>
-            </li>
-            <li class="s_abordagem">
-              <article>
-                <h3 class="heading font-x1"><a href="#">BERT-Large em português</a></h3>
-                <h5><b>55,4%</b></h5>
-              </article>
-            </li>
-            <li class="s_abordagem">
-              <article>
-                <h3 class="heading font-x1"><a href="#">BERT Multilingual Winogrande</a></h3>
-                <h5><b>61,75%</b></h5>
-              </article>
-            </li>
-          </ul>
+        <ul class="nospace group">
+          <li class="s_abordagem">
+            <article>
+              <h3 class="heading font-x1"><a href="#">BERT-Base Multilingual</a></h3>
+              <h5><b>58,6%</b></h5>
+            </article>
+          </li>
+          <li class="s_abordagem">
+            <article>
+              <h3 class="heading font-x1"><a href="#">BERT-Large em português</a></h3>
+              <h5><b>55,4%</b></h5>
+            </article>
+          </li>
+          <li class="s_abordagem">
+            <article>
+              <h3 class="heading font-x1"><a href="#">BERT Multilingual Winogrande</a></h3>
+              <h5><b>61,75%</b></h5>
+            </article>
+          </li>
+        </ul>
       </section>
-      <div class='tableauPlaceholder' id='viz1605381452914' style='position: relative'><noscript><a href='#'><img
+      <div class='tableauPlaceholder' id='viz1605488281596' style='position: relative'><noscript><a href='#'><img
               alt=' '
-              src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Te&#47;TesteTCC&#47;Graficoaleatrio&#47;1_rss.png'
+              src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Te&#47;TesteTCC&#47;Painel1&#47;1_rss.png'
               style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
           <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
           <param name='embed_code_version' value='3' />
           <param name='site_root' value='' />
-          <param name='name' value='TesteTCC&#47;Graficoaleatrio' />
+          <param name='name' value='TesteTCC&#47;Painel1' />
           <param name='tabs' value='no' />
           <param name='toolbar' value='yes' />
           <param name='static_image'
-            value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Te&#47;TesteTCC&#47;Graficoaleatrio&#47;1.png' />
+            value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Te&#47;TesteTCC&#47;Painel1&#47;1.png' />
           <param name='animate_transition' value='yes' />
           <param name='display_static_image' value='yes' />
           <param name='display_spinner' value='yes' />
@@ -144,12 +142,23 @@ Licence URI: https://www.os-templates.com/template-terms
           <param name='language' value='pt' />
           <param name='filter' value='publish=yes' /></object>
       </div>
-      <script type='text/javascript'>
-        var divElement = document.getElementById('viz1605381452914');
-        var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+      <script type='text/javascript'>                    
+        var divElement = document.getElementById('viz1605488281596'); 
+        var vizElement = divElement.getElementsByTagName('object')[0]; 
+        if (divElement.offsetWidth > 800) { vizElement.style.minWidth = '620px'; 
+        vizElement.style.maxWidth = '1090px'; 
+        vizElement.style.width = '100%'; 
+        vizElement.style.height = '1687px'; } 
+        else if (divElement.offsetWidth > 500) { vizElement.style.minWidth = '620px'; 
+        vizElement.style.maxWidth = '1090px'; 
+        vizElement.style.width = '100%'; 
+        vizElement.style.height = '1687px'; } 
+        else { vizElement.style.width = '100%'; 
+        vizElement.style.height = '4577px'; } 
+        var scriptElement = document.createElement('script'); 
+        scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; 
+        vizElement.parentNode.insertBefore(scriptElement, vizElement);                
       </script>
-      <hr class="btmspace-80">
-      <div class="clear"></div>
     </main>
   </div>
   <!-- ################################################################################################ -->
@@ -219,16 +228,19 @@ Licence URI: https://www.os-templates.com/template-terms
         <ul class="nospace btmspace-30 linklist contact">
           <li><i class="fa fa-map-marker"></i>
             <address>
-            Av. Prof. Luciano Gualberto &amp; 380, Escola Politécnica da Universidade de São Paulo
+              Av. Prof. Luciano Gualberto &amp; 380, Escola Politécnica da Universidade de São Paulo
             </address>
           </li>
-          <li ><i class="fa fa-phone"></i> +55 (11) 970372050</li>
-          <li ><i class="fa fa-envelope-o"></i>thabata.risso@usp.br   |   guilherme.vecchi@usp.br</li>
+          <li><i class="fa fa-phone"></i> +55 (11) 970372050</li>
+          <li><i class="fa fa-envelope-o"></i>thabata.risso@usp.br | guilherme.vecchi@usp.br</li>
         </ul>
         <ul class="faico clear">
-          <li><a class="faicon-facebook" href="https://github.com/thaapontes/tcc_project" title="Repositório do projeto"><i class="fa fa-github"></i></a></li>
-          <li><a class="faicon-facebook" href="https://github.com/thaapontes/thaapontes.github.io" title="Repositório do website"><i class="fa fa-github"></i></a></li>
-          <li><a class="faicon-linkedin" href="https://www.linkedin.com/in/thabata-pontes/" title="Thábata's Linkedin"><i class="fa fa-linkedin"></i></a></li>
+          <li><a class="faicon-facebook" href="https://github.com/thaapontes/tcc_project"
+              title="Repositório do projeto"><i class="fa fa-github"></i></a></li>
+          <li><a class="faicon-facebook" href="https://github.com/thaapontes/thaapontes.github.io"
+              title="Repositório do website"><i class="fa fa-github"></i></a></li>
+          <li><a class="faicon-linkedin" href="https://www.linkedin.com/in/thabata-pontes/"
+              title="Thábata's Linkedin"><i class="fa fa-linkedin"></i></a></li>
         </ul>
       </div>
       <!--
