--- a/tcc/tableau.html
+++ b/tcc/tableau.html
@@ -80,7 +80,8 @@ Licence URI: https://www.os-templates.com/template-terms
         <h3>Primeira abordagem</h3>
         <br>
         <p>A primeira abordagem escolhida foi a de traduzir os esquemas com ambiguidade em português brasileiro para o
-          inglês e utilizar um <b>modelo pré-treinado em inglês</b>.</p>
+        inglês e utilizar um <b>modelo pré-treinado em inglês</b>. Para esta abordagem, <b>BERT-Large sem ajuste fino</b> é um desses 
+        modelos pré-treinados em inglês sem ajuste fino e <b>BERT-Large WSCR</b> é a sua versão com ajuste fino no dataset WSCR.</p>
         <ul class="nospace group">
           <li class="f_abordagem">
             <article>
@@ -100,7 +101,10 @@ Licence URI: https://www.os-templates.com/template-terms
         <h3>Segunda abordagem</h3>
         <br>
         <p>A segunda abordagem escolhida foi a de utilizar os esquemas com ambiguidade em português brasileiro em um
-          <b>modelo pré-treinado em português ou treinar um</b>.</p>
+          <b>modelo pré-treinado somente em português ou multilingual.</b> Para esta abordagem, <b>BERT-Base Multilingual</b> 
+          é um modelo pré-treinado em algumas línguas inclusive o português brasileiro, <b>BERT-Large</b> é um modelo pré-treinado
+           somente em português e o <b>BERT-Base Multilingual Winogrande</b> é um modelo também pré-treinado em português mas com 
+           ajuste fino no dataset Winogrande.</p>
         <ul class="nospace group">
           <li class="s_abordagem">
             <article>
@@ -110,13 +114,13 @@ Licence URI: https://www.os-templates.com/template-terms
           </li>
           <li class="s_abordagem">
             <article>
-              <h3 class="heading font-x1"><a href="#">BERT-Large em português</a></h3>
+              <h3 class="heading font-x1"><a href="#">BERT-Large</a></h3>
               <h5><b>55,4%</b></h5>
             </article>
           </li>
           <li class="s_abordagem">
             <article>
-              <h3 class="heading font-x1"><a href="#">BERT Multilingual Winogrande</a></h3>
+              <h3 class="heading font-x1"><a href="#">BERT-Base Multilingual Winogrande</a></h3>
               <h5><b>61,75%</b></h5>
             </article>
           </li>
