--- a/tcc/tableau.html
+++ b/tcc/tableau.html
@@ -102,7 +102,7 @@ Licence URI: https://www.os-templates.com/template-terms
         <br>
         <p>A segunda abordagem escolhida foi a de utilizar os esquemas com ambiguidade em português brasileiro em um
           <b>modelo pré-treinado somente em português ou multilingual.</b> Para esta abordagem, <b>BERT-Base Multilingual</b> 
-          é um modelo pré-treinado em algumas línguas inclusive o português brasileiro, <b>BERT-Large</b> é um modelo pré-treinado
+          é um modelo pré-treinado em algumas línguas inclusive o português brasileiro, <b>BERT-Large Português</b> é um modelo pré-treinado
            somente em português e o <b>BERT-Base Multilingual Winogrande</b> é um modelo também pré-treinado em português mas com 
            ajuste fino no dataset Winogrande.</p>
         <ul class="nospace group">
@@ -114,13 +114,13 @@ Licence URI: https://www.os-templates.com/template-terms
           </li>
           <li class="s_abordagem">
             <article>
-              <h3 class="heading font-x1"><a href="#">BERT-Large</a></h3>
+              <h3 class="heading font-x1"><a href="#">BERT-Large  Português</a></h3>
               <h5><b>55,4%</b></h5>
             </article>
           </li>
           <li class="s_abordagem">
             <article>
-              <h3 class="heading font-x1"><a href="#">BERT-Base Multilingual Winogrande</a></h3>
+              <h3 class="heading font-x1"><a href="#">BERT-Base Mult. Winogrande</a></h3>
               <h5><b>61,75%</b></h5>
             </article>
           </li>
