Minor visual fixes

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@ Licence URI: https://www.os-templates.com/template-terms
           <article><i class="fa fa-list"></i>
             <h6 class="heading font-x1"><a href="#">“Paul tentou ligar para o George, mas ele não foi bem sucedido.”</a></h6>
             <p>Quem não foi bem sucedido?</p>
-            <p><b>b) Paul</b></p>
-            <p>a) George</p>
+            <p><b>a) Paul</b></p>
+            <p>b) George</p>
           </article>
         </li>
         <li class="t_third">
@@ -247,16 +247,17 @@ Licence URI: https://www.os-templates.com/template-terms
       <ul class="nospace btmspace-30 linklist contact">
         <li><i class="fa fa-map-marker"></i>
           <address>
-          Av. Prof. Luciano Gualberto &amp; 380, Escola Politécnica da Universidade de São Paulo
+            Escola Politécnica da Universidade de São Paulo - Av. Prof. Luciano Gualberto, 380
           </address>
         </li>
-        <li ><i class="fa fa-phone"></i> +55 (11) 970372050</li>
+        <li ><i class="fa fa-phone"></i> +55 11 97037-2050   |   +55 11 97408-2231</li>
         <li ><i class="fa fa-envelope-o"></i>thabata.risso@usp.br   |   guilherme.vecchi@usp.br</li>
       </ul>
       <ul class="faico clear">
         <li><a class="faicon-facebook" href="https://github.com/thaapontes/tcc_project" title="Repositório do projeto"><i class="fa fa-github"></i></a></li>
         <li><a class="faicon-facebook" href="https://github.com/thaapontes/thaapontes.github.io" title="Repositório do website"><i class="fa fa-github"></i></a></li>
         <li><a class="faicon-linkedin" href="https://www.linkedin.com/in/thabata-pontes/" title="Thábata's Linkedin"><i class="fa fa-linkedin"></i></a></li>
+        <li><a class="faicon-linkedin" href="https://www.linkedin.com/in/guilherme-vecchi/" title="Thábata's Linkedin"><i class="fa fa-linkedin"></i></a></li>
       </ul>
     </div>
     <!--
