--- a/tableau.html
+++ b/tableau.html
@@ -114,14 +114,15 @@ Licence URI: https://www.os-templates.com/template-terms
           </li>
           <li class="s_abordagem">
             <article>
-              <h3 class="heading font-x1"><a href="#">BERT-Large  Português</a></h3>
+              <h3 class="heading font-x1"><a href="#">BERT-Large Português </a></h3>
+              <br>
               <h5><b>55,4%</b></h5>
             </article>
           </li>
           <li class="s_abordagem">
             <article>
-              <h3 class="heading font-x1"><a href="#">BERT-Base Mult. Winogrande</a></h3>
-              <h5><b>61,75%</b></h5>
+              <h3 class="heading font-x1"><a href="#">BERT-Base Mult. Winogrande traduzido</a></h3>
+              <h5><b>65,26%</b></h5>
             </article>
           </li>
         </ul>
