Update tableau page footer

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ Licence URI: https://www.os-templates.com/template-terms
         <li><a class="faicon-facebook" href="https://github.com/thaapontes/tcc_project" title="Repositório do projeto"><i class="fa fa-github"></i></a></li>
         <li><a class="faicon-facebook" href="https://github.com/thaapontes/thaapontes.github.io" title="Repositório do website"><i class="fa fa-github"></i></a></li>
         <li><a class="faicon-linkedin" href="https://www.linkedin.com/in/thabata-pontes/" title="Thábata's Linkedin"><i class="fa fa-linkedin"></i></a></li>
-        <li><a class="faicon-linkedin" href="https://www.linkedin.com/in/guilherme-vecchi/" title="Thábata's Linkedin"><i class="fa fa-linkedin"></i></a></li>
+        <li><a class="faicon-linkedin" href="https://www.linkedin.com/in/guilherme-vecchi/" title="Guilherme's Linkedin"><i class="fa fa-linkedin"></i></a></li>
       </ul>
     </div>
     <!--
