--- a/tableau.html
+++ b/tableau.html
@@ -227,25 +227,23 @@ Licence URI: https://www.os-templates.com/template-terms
 
   <!-- ################################################################################################ -->
   <div class="wrapper row4">
-    <footer id="footer" class="hoc clear">
+    <footer id="footer" class="hoc clear"> 
       <div class="one_quarter first">
         <h6 class="heading">Contatos</h6>
         <ul class="nospace btmspace-30 linklist contact">
           <li><i class="fa fa-map-marker"></i>
             <address>
-              Av. Prof. Luciano Gualberto &amp; 380, Escola Politécnica da Universidade de São Paulo
+              Escola Politécnica da Universidade de São Paulo - Av. Prof. Luciano Gualberto, 380
             </address>
           </li>
-          <li><i class="fa fa-phone"></i> +55 (11) 970372050</li>
-          <li><i class="fa fa-envelope-o"></i>thabata.risso@usp.br | guilherme.vecchi@usp.br</li>
+          <li ><i class="fa fa-phone"></i> +55 11 97037-2050   |   +55 11 97408-2231</li>
+          <li ><i class="fa fa-envelope-o"></i>thabata.risso@usp.br   |   guilherme.vecchi@usp.br</li>
         </ul>
         <ul class="faico clear">
-          <li><a class="faicon-facebook" href="https://github.com/thaapontes/tcc_project"
-              title="Repositório do projeto"><i class="fa fa-github"></i></a></li>
-          <li><a class="faicon-facebook" href="https://github.com/thaapontes/thaapontes.github.io"
-              title="Repositório do website"><i class="fa fa-github"></i></a></li>
-          <li><a class="faicon-linkedin" href="https://www.linkedin.com/in/thabata-pontes/"
-              title="Thábata's Linkedin"><i class="fa fa-linkedin"></i></a></li>
+          <li><a class="faicon-facebook" href="https://github.com/thaapontes/tcc_project" title="Repositório do projeto"><i class="fa fa-github"></i></a></li>
+          <li><a class="faicon-facebook" href="https://github.com/thaapontes/thaapontes.github.io" title="Repositório do website"><i class="fa fa-github"></i></a></li>
+          <li><a class="faicon-linkedin" href="https://www.linkedin.com/in/thabata-pontes/" title="Thábata's Linkedin"><i class="fa fa-linkedin"></i></a></li>
+          <li><a class="faicon-linkedin" href="https://www.linkedin.com/in/guilherme-vecchi/" title="Guilherme's Linkedin"><i class="fa fa-linkedin"></i></a></li>
         </ul>
       </div>
       <!--
