Add Objective and Implementation section to index page

--- a/index.html
+++ b/index.html
@@ -116,7 +116,54 @@ Licence URI: https://www.os-templates.com/template-terms
         </li>
       </ul>
     </section>
+    <hr class="btmspace-80">
+
     <!-- ################################################################################################ -->
+    <section id="introblocks">
+      <div class="sectiontitle">
+        <h6 class="heading">Objetivo do trabalho</h6>
+        <br>
+        <p>Este trabalho de formatura tem como objetivo desenvolver uma solução <b>estado da arte</b> para o desafio de esquemas de Winograd traduzido para <b>português brasileiro</b>,
+        aproximando-se do desempenho humano e dos resultados estado da arte em inglês no desafio.</p>
+      </div>
+      <ul class="nospace group">
+        <li class="t_third first">
+          <article>
+            <h3 class="heading font-x1"><a href="#">Estado da arte em português brasileiro</a></h3>
+            <h5><b>45,5%</b></h5>
+            </article>
+        </li>
+        <li class="t_third">
+          <article>
+            <h3 class="heading font-x1"><a href="#">Estado da arte em inglês</a></h3>
+            <br>
+            <h5><b>90,1%</b></h5>
+          </article>
+        </li>
+        <li class="t_third">
+          <article>
+            <h3 class="heading font-x1"><a href="#">Desempenho humano</a></h3>
+            <br>
+            <h5><b>96,5%</b></h5>
+          </article>
+        </li>
+      </ul>
+    </section>
+    <hr class="btmspace-80">
+    <!-- ################################################################################################ -->
+    <section id="introblocks">
+      <div class="sectiontitle">
+        <h6 class="heading">Implementação</h6>
+        <br>
+        <p>Toda a implementação e execução deste trabalho foi feita no <i><b>Google Colab</b></i> (aliado a uma biblioteca para armazenamento de código no <i>Google Drive</i>), 
+          pois este ambiente fornece GPUs para uso gratuito. Além disso, scripts adicionais, principalmente para tradução, foram armazenados no <i><b>Github</b></i></p>
+        <br>
+        <a class="btn" href="https://colab.research.google.com/drive/1i2GuYpxcvjJl7xSUavU8F2s42hDQn2kh?authuser=1" target="_blank">  Colab  </a>
+        <a class="btn" href="https://github.com/thaapontes/tcc_project" target="_blank">  GitHub  </a>
+      </div>
+    </section>
+    <!-- ################################################################################################ -->
+    
     <hr class="btmspace-80">
     <!-- AUTORES E ORIENTADOR  -->
     <section>
@@ -254,10 +301,10 @@ Licence URI: https://www.os-templates.com/template-terms
         <li ><i class="fa fa-envelope-o"></i>thabata.risso@usp.br   |   guilherme.vecchi@usp.br</li>
       </ul>
       <ul class="faico clear">
-        <li><a class="faicon-facebook" href="https://github.com/thaapontes/tcc_project" title="Repositório do projeto"><i class="fa fa-github"></i></a></li>
-        <li><a class="faicon-facebook" href="https://github.com/thaapontes/thaapontes.github.io" title="Repositório do website"><i class="fa fa-github"></i></a></li>
-        <li><a class="faicon-linkedin" href="https://www.linkedin.com/in/thabata-pontes/" title="Thábata's Linkedin"><i class="fa fa-linkedin"></i></a></li>
-        <li><a class="faicon-linkedin" href="https://www.linkedin.com/in/guilherme-vecchi/" title="Guilherme's Linkedin"><i class="fa fa-linkedin"></i></a></li>
+        <li><a class="faicon-facebook" href="https://github.com/thaapontes/tcc_project" target="_blank" title="Repositório do projeto"><i class="fa fa-github"></i></a></li>
+        <li><a class="faicon-facebook" href="https://github.com/thaapontes/thaapontes.github.io" target="_blank" title="Repositório do website"><i class="fa fa-github"></i></a></li>
+        <li><a class="faicon-linkedin" href="https://www.linkedin.com/in/thabata-pontes/" target="_blank" title="Thábata's Linkedin"><i class="fa fa-linkedin"></i></a></li>
+        <li><a class="faicon-linkedin" href="https://www.linkedin.com/in/guilherme-vecchi/" target="_blank" title="Guilherme's Linkedin"><i class="fa fa-linkedin"></i></a></li>
       </ul>
     </div>
     <!--
